restructured css to prevent message profile pic from getting hidden behind CustomScrollbar div

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -942,7 +942,7 @@ nav {
 
 .chat {
   position: relative;
-  padding: 10px 20px 0px 50px;
+  padding-top: 10px;
   overflow-y: scroll;
   height: 360px;
 }
@@ -958,21 +958,22 @@ nav {
   text-align: center;
   font-size: 11px;
   color: #666;
-  padding: 4px 0px 10px 0px;
+  padding: 4px 20px 10px 50px;
   display: inline-block;
 }
 
 .chat-msg {
   float: left;
-  max-width: 75%;
-  margin-bottom: 8px;
+  max-width: 58%;
+  margin-left: 50px;
   clear: both;
 }
 
 .chat-msg-user {
   float: right;
-  max-width: 75%;
+  max-width: 58%;
   margin-bottom: 8px;
+  margin-right: 20px;
   clear: both;
 }
 
